adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
    <h1>Olá, mundo!</h1>
    <hr>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolorum voluptatibus quia aspernatur laborum quasi, quisquam nisi ipsum doloremque quo optio eum repudiandae alias quibusdam tempora non tempore pariatur facere?</p> 
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quo eligendi saepe vel facere cupiditate vero nam consequuntur recusandae iste a nobis accusamus ab, blanditiis tempora aspernatur, eum quaerat exercitationem?</p>
 </body>
 </html>
